; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_lcn.c_wlc_lcnphy_set_tx_gain_override.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_lcn.c_wlc_lcnphy_set_tx_gain_override.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_phy = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcms_phy*, i32)* @wlc_lcnphy_set_tx_gain_override to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wlc_lcnphy_set_tx_gain_override(%struct.brcms_phy* %0, i32 %1) #0 {
  %3 = alloca %struct.brcms_phy*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.brcms_phy* %0, %struct.brcms_phy** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  %8 = zext i1 %7 to i64
  %9 = select i1 %7, i32 1, i32 0
  store i32 %9, i32* %5, align 4
  %10 = load %struct.brcms_phy*, %struct.brcms_phy** %3, align 8
  %11 = load i32, i32* %5, align 4
  %12 = shl i32 %11, 7
  %13 = call i32 @mod_phy_reg(%struct.brcms_phy* %10, i32 1200, i32 128, i32 %12)
  %14 = load %struct.brcms_phy*, %struct.brcms_phy** %3, align 8
  %15 = load i32, i32* %5, align 4
  %16 = shl i32 %15, 14
  %17 = call i32 @mod_phy_reg(%struct.brcms_phy* %14, i32 1200, i32 16384, i32 %16)
  %18 = load %struct.brcms_phy*, %struct.brcms_phy** %3, align 8
  %19 = load i32, i32* %5, align 4
  %20 = shl i32 %19, 6
  %21 = call i32 @mod_phy_reg(%struct.brcms_phy* %18, i32 1083, i32 64, i32 %20)
  ret void
}

declare dso_local i32 @mod_phy_reg(%struct.brcms_phy*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
